force-app/main/default/objects/Activity/fields/Action_Plan_Source__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Source__c</fullName>
    <description
  >Name of the Northstar Action Plan template that generated this Task. Distinct from the Activity.TaskAPTask__c lookup added by ActionPlansV4 — TaskAPTask__c points to the AP-side task record; this field captures the human-readable template name so reports don't need to join.</description>
    <inlineHelpText
  >Which Action Plan template generated this Task. Auto-stamped.</inlineHelpText>
    <label>Action Plan Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>