force-app/main/default/objects/Activity/fields/Lead_Score_At_Creation__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_At_Creation__c</fullName>
    <description
  >Snapshot of Lead.Lead_Score__c at the moment this Task was created (typically by the SDR-routing flow on Lead). Lets attribution reports compare the score the SDR saw vs. the current score without time-travel queries.</description>
    <inlineHelpText
  >Lead score captured at Task creation. Snapshot — do not edit.</inlineHelpText>
    <label>Lead Score At Creation</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>