force-app/main/default/objects/Activity/fields/Routing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Routing_Reason__c</fullName>
    <description
  >Free-text capture of why this Task was assigned to its current owner. Stamped by the SDR/CS task-creation flows so leadership can audit routing decisions without diving into flow logs.</description>
    <inlineHelpText
  >Why this Task was routed where it was. Auto-stamped.</inlineHelpText>
    <label>Routing Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>